Corrected spacing in navbar dropdown in mobile mode.

--- a/src/themes/gi/app/navbar/expandable-navbar-section/expandable-navbar-section.component.scss
+++ b/src/themes/gi/app/navbar/expandable-navbar-section/expandable-navbar-section.component.scss
@@ -4,8 +4,8 @@
     border-top-left-radius: 0;
     border-top-right-radius: 0;
     ::ng-deep a.nav-link {
-        padding-right: var(--bs-spacer);
-        padding-left: var(--bs-spacer);
+      padding-right: var(--bs-spacer);
+      padding-left: var(--bs-spacer);
         white-space: nowrap;
     }
 }
@@ -15,7 +15,7 @@
     .dropdown-toggle {
         &:after {
             float: right;
-            // margin-top: calc(var(--bs-spacer) / 2);
+            margin-top: calc(var(--bs-spacer) / 2);
         }
     }
     .dropdown-menu {
